Many, many changes
Changed example of PathBreaker back to the old one
Fixes throughout the global transformations

Sent to Alessio

--- a/flows.tex
+++ b/flows.tex
@@ -303,6 +303,8 @@ Given an atomic flow $\phi$ with polarity assignment $\pi$, the polarity assignm
 
 \TODO{Define connected component.}
 
+\TODO{Define `isolated subflow'.}
+
 \TODO{Define subflow}.
 
 %\begin{example}\label{example:LabelsIsomorphicFlows}
