--- a/global_transformations/four_boxes.tex
+++ b/global_transformations/four_boxes.tex
@@ -22,7 +22,8 @@ We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes})
 %one
 (-32,0)="A";
 "A"+(-8,0)*{\invisiblemark};
-"A"+( 1,19)*{\afvjm2};
+"A"+( 1,18.5)*{\aflabelleft{\boldsymbol{\epsilon_1}}};
+"A"+( 1,18.90)*{\afvjm{2.2}};
 "A"+( 1,12.25)*{\afacumexsq{}{}{}{}{}{}84};
 "A"+(-3, 5)*{\afvjm2};
 "A"+( 3, 8)*{\afawdm{}{}{}{}};
@@ -36,6 +37,7 @@ We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes})
 %
 "A"+(-3, -5)*{\afvjm2};
 "A"+( 1,-12)*{\afacdmexsq{}{}{}{}{}{}84};
+"A"+( 1,-17.75)*{\aflabelleft{\boldsymbol{\iota_1}}};
 "A"+( 1,-19)*{\afvjm2};
 "A"+( 3, -8)*{\afawum{}{}{}{}};
 %two
@@ -81,7 +83,8 @@ We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes})
 ( 1,-8)*{\afvjm8};
 (-5,-8)*{\afawum{}{}{}{}};
 %psi
-(13, 12)*{\afvjdm{16}{}{g(\boldsymbol{\epsilon_4})}};
+(13, 16)*{\afvjdm{8}{}{\boldsymbol{\epsilon_4}}};
+(13,  8)*{\afvjum{8}{}{g(\boldsymbol{\epsilon_4})}};
 ( 9, 13)*{\afvjm2};
 ( 7,  8)*{\afacdm{}{}{}{}{}{}};
 ( 3, 12)*{\afaidnw{}{}};
@@ -95,7 +98,8 @@ We define the reduction $\to_\frfb$ (where $\frfb$ stands for \emph{four boxes})
 ( 3,-14)*{\afaiunw{}{}};
 ( 7, -8)*{\afacum{}{}{}{}{}{}};
 ( 9,-13)*{\afvjm2};
-(13,-12)*{\afvjum{16}{}{g(\boldsymbol{\iota_4})}};
+(13, -8)*{\afvjdm{8}{}{g(\boldsymbol{\iota_4})}};
+(13,-16)*{\afvjum{8}{}{\boldsymbol{\iota_4}}};
 }\quad.
 \]
 \end{definition}
@@ -121,7 +125,7 @@ Let $a_1^{\phi}$, $\dots$, $a_n^{\phi}$ be all the atoms whose occurrences map t
 \]
 be the $\ai$-decomposed form of $\Phi$.
 
-We show several intermediate derivations which will be used to build $\Psi$. To make it easier to verify the atomic flow of $\Psi$, we will, through a slight missuse of notation, label the atom occurrences of the intermediate derivations to indicate what atomic flow each atom occurrence will map to once the derivations are combined to create $\Psi$.
+We show several intermediate derivations which will be used to build $\Psi$. To make it easier to verify the atomic flow of $\Psi$, we will, through a slight missuse of notation, label the atom occurrences of the intermediate derivations to indicate what atomic flow each atom occurrence will map to, once the derivations are combined to create $\Psi$.
 
 Consider the substitution
 \[
@@ -221,7 +225,9 @@ with atomic flows
 \[
 \atomicflow
 {
-( 0, 0)*{\afacumexsq{f_1(\boldsymbol{\epsilon_1})}{}{f_3(\boldsymbol{\epsilon_1})}{}{}{}52};
+( 0, 0)*{\afacumexsq{}{}{}{}{}{}52};
+(-5,-3.75)*{\aflabelleft{f_1(\boldsymbol{\epsilon_1})}};
+( 5,-3.75)*{\aflabelleft{f_3(\boldsymbol{\epsilon_1})}};
 (12,-2)*{\afawdm{}{}{f_2(\boldsymbol{\epsilon_1})}{}};
 (20,-2)*{\afawdm{}{}{f_4(\boldsymbol{\epsilon_1})}{}};
 (24, 0)*{\afvjum{12}{}{g(\boldsymbol{\epsilon_4})}};
@@ -229,7 +235,9 @@ with atomic flows
 \qquad\mbox{and}\qquad
 \atomicflow
 {
-( 0,0)*{\afacdmexsq{f_1(\boldsymbol{\iota_1})}{}{f_2(\boldsymbol{\iota_1})}{}{}{}52};
+( 0,0)*{\afacdmexsq{}{}{}{}{}{}52};
+(-5,4.25)*{\aflabelleft{f_1(\boldsymbol{\iota_1})}};
+( 5,4.25)*{\aflabelleft{f_2(\boldsymbol{\iota_1})}};
 (12,2)*{\afawum{}{}{f_3(\boldsymbol{\iota_1})}{}};
 (20,2)*{\afawum{}{}{f_4(\boldsymbol{\iota_1})}{}};
 (24,0)*{\afvjdm{12}{}{g(\boldsymbol{\iota_4})}};
@@ -348,9 +356,11 @@ Given an atomic flow $\phi'$ with polarity assignment $\pi$, there exists an ato
 We refer to the figure in Definition~\vref{definition:FourBoxes}. Let the subflow $\phi$ contain all the positive edges, and let the subflow $\psi$ contain all the negative edges, then $\psi'$ is on simple form with respect to $\pi$ by Definition~\vref{definition:FlowNormalForms}.
 \end{proof}
 
+\TODO{Think hard about the next definition and decide if it makes more sense to define with respect to atoms instead of with respect to polariyt.}
+
 \newcommand{\Simpl}{\mathsf{Simpl}}
 \begin{definition}\label{definition:DerSimpleForm}
-Given a derivation $\Phi$ with atomic flow $\phi$ and a polarity assignment $\pi$, let $\Psi$ with atomic flow $\psi$ be the derivation obtained in the proof of Theorem~\ref{theorem:SoundFourBoxes}, such that $\phi\to_\frfb\psi$, then we say that $\Psi$ is \emph{the} (\emph{canonica}) \emph{simple form of\/ $\Phi$ with respect to $\pi$}, denoted $\Simpl(\Phi,\pi)$.
+Given a derivation $\Phi$ with atomic flow $\phi$ and a polarity assignment $\pi$, let $\Psi$ with atomic flow $\psi$ be the derivation obtained in the proof of Theorem~\ref{theorem:SoundFourBoxes}, such that $\phi\to_\frfb\psi$, then we say that $\Psi$ is \emph{the} (\emph{canonical}) \emph{simple form of\/ $\Phi$ with respect to $\pi$}, denoted $\Simpl(\Phi,\pi)$.
 \end{definition}
 
 \begin{lemma}\label{lemma:SizeFourBoxes}
@@ -358,7 +368,7 @@ Given a derivation $\Phi$ and a polarity assignment for its atomic flow $\pi$, t
 \end{lemma}
 
 \begin{proof}
-The result follows by Proposition~\vref{proposition:DerivationSubstitution} and the proof of Theorem~\vref{theorem:SoundFourBoxes}.
+Since the formulae we substitute with in the proof of Theorem~\vref{theorem:SoundFourBoxes} have size 4, the result follows by Proposition~\vref{proposition:DerivationSubstitution}.
 \end{proof}
 
 \begin{lemma}\label{lemma:FourBoxesStreamlining}
