--- a/transformations.tex
+++ b/transformations.tex
@@ -2,7 +2,7 @@
 
 \TODO{Polarity assignment: `to' -> `for'}
 
-%---------------------------------------
+%-------------------------------------------------
 \begin{definition}\label{definition:FlowReduction}
 An (\emph{atomic-flow}) \emph{reduction $R$} is a binary relation on the set of atomic flows, such that $\phi\mathrel{R}\psi$ if
 \begin{enumerate}
@@ -11,20 +11,24 @@ there is a one-to-one map, $f$, from the upper edges of $\phi$ to the upper edge
 \item
 there is a one-to-one map, $g$, from the lower edges of $\phi$ to the lower edges of $\psi$; and
 \item\label{definition:FlowReduction:item:Polarity}
-for every polarity assignment $\pi$ for $\phi$, there is a polarity assignment $\pi'$ for $\psi$ such that $\pi'(f(\epsilon))=\pi(\epsilon)$ and $\pi'(g(\iota))=\pi(\iota)$, for any upper edge $\epsilon$ and any lower edge $\epsilon'$ of $\phi'$.
+for every polarity assignment $\pi$ for $\phi$, there is a polarity assignment $\pi'$ for $\psi$ such that $\pi'(f(\epsilon))=\pi(\epsilon)$ and $\pi'(g(\iota))=\pi(\iota)$, for any upper edge $\epsilon$ and any lower edge $\iota$ of $\phi'$.
 \end{enumerate}
 \end{definition}
+%---------------
 
+%-----------------------------------------------
 \begin{remark}\label{remark:LabelBijectionEdges}
-Given a reduction $R$ and two atomic flows $\phi$ and $\psi$ such that $\phi\mathrel{R}\psi$, we indicate the bijections $f$ and $g$ by, for every upper (resp., lower) edge $\epsilon$ of $\phi$, labeling the upper (resp., lower) edge $f(\epsilon)$ (resp., $g(\epsilon)$) of $\psi$ by $\epsilon$.
+Given a reduction $R$ and two atomic flows $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, we indicate the bijections $f$ and $g$ by, for every upper (resp., lower) edge $\epsilon$ of $\phi$, labeling the upper (resp., lower) edge $f(\epsilon)$ (resp., $g(\epsilon)$) of $\psi$ by $\epsilon$.
 \end{remark}
+%-----------
 
-%---------------------------------------
+%--------------------------------------------------
 \begin{definition}\label{definition:SoundRedcution}
-A reduction $R$ is \emph{sound} if, for every $\phi$ and $\psi$ such that $\phi\mathrel{R}\psi$ and for every derivation $\Phi$ with atomic flow $\phi$, there is a derivation $\Psi$ with atomic flow $\psi$ such that $\Phi$ and $\Psi$ have the same premiss and conclusion; in this case we write $\Phi\mathrel{R}\Psi$.
+A reduction $R$ is \emph{sound} if, for every $\phi$ and $\psi$, such that $\phi\mathrel{R}\psi$, and for every derivation $\Phi$ with atomic flow $\phi$, there is a derivation $\Psi$ with atomic flow $\psi$ such that $\Phi$ and $\Psi$ have the same premiss and conclusion; in this case we write $\Phi\mathrel{R}\Psi$.
 \end{definition}
+%---------------
 
-%-------------------------------------------------------------------------------
+%------------------------------------------------------------
 \begin{proposition}\label{proposition:DerivationSubstitution}
 Given a derivation\/ $\vlder\Phi\SKS{\beta}\alpha$, let its associated flow have shape
 \[
@@ -52,7 +56,7 @@ whose associated flow is
 ( -5, 6)*{\afvjdm4{}{}};
 (  5, 6)*{\afvjdm4{}{}};
 (-13, 2)*{\aflabelleft{f_1(\phi)}};
-( -1, 2)*{\aflabelleft{f_m(\phi)}};
+( -1, 2)*{\aflabelleft{f_n(\phi)}};
 (  9, 2)*{\aflabelleft\psi};
 (-17, 0)*{\affr88};
 (-11, 0)*{\cdots};
@@ -64,27 +68,31 @@ whose associated flow is
 }
 \quad,
 \]
-where $m$ is the number of atom occurrences in $\beta$; moreover, the size of\/ $\Psi$ depends at most linearly on the size of\/ $\Phi$ and quadratically on the size of $\beta$.
+where $n$ is the number of atom occurrences in $\gamma$; moreover, the size of\/ $\Psi$ depends at most linearly on the size of\/ $\Phi$ and quadratically on the size of $\gamma$.
 \end{proposition}
+%----------------
 
 %-------------------------------------------------------------------------------
 \begin{proof}
-
 We can proceed by structural induction $\Phi$. We replace every occurrence of $a^\phi$ by $\gamma$, and every inference rule instance of $\acd$, $\acu$, $\awd$ and $\awu$, where $a^\phi$ appears, by their generic counterparts with $\gamma$ in the place of $a^\phi$. The result then follows by Lemma~\vref{lemma:GenericWeakening} and Lemma~\vref{lemma:GenericContraction}.
 \end{proof}
+%----------
 
 \TODO{Put reference.}
 
+%-------------
 \begin{remark}
 The derivation $\Psi$ obtained in the proof of Propostion~\vref{proposition:DerivationSubstitution} is denoted $\Phi\{a^\phi/\gamma\}$. The notion of substitution can be extended to allow $\phi$ to contain interaction and cut vertices, but we shall not need that in this thesis.
 \end{remark}
+%-----------
 
-%======================================
+%====================================================================
 \section{Global Transformations}\label{section:GlobalTransformations}
 
+%-------------
 \begin{remark}
 To avoid ambiguity in Definitions~\vref{definition:FourBoxes}, \vref{definition:IsolatedSubflowRemoval}, \vref{definition:PathBreaker} and \vref{definition:MultipleIsolatedSubflowsRemoval} we have establish the following convention:
-Let $\boldsymbol\epsilon=\{\epsilon_1,\dots,\epsilon_n\}$, $\boldsymbol\iota=\{\iota_1,\dots,\iota_m\}$, $\boldsymbol{\epsilon'}=\{\epsilon'_1,\dots,\epsilon'_n\}$ and $\boldsymbol{\iota'}=\{\iota_1,\dots,\iota_m\}$. Then, when we write
+Let $\boldsymbol\epsilon=\{\epsilon_1,\dots,\epsilon_n\}$, $\boldsymbol\iota=\{\iota_1,\dots,\iota_m\}$, $\boldsymbol{\epsilon'}=\{\epsilon'_1,\dots,\epsilon'_n\}$ and $\boldsymbol{\iota'}=\{\iota_1,\dots,\iota_m\}$, then, when we write
 \[
 \atomicflow
 {
@@ -225,9 +233,9 @@ we mean
 ( 6, 0)*{\afvjd8{f_4(\iota_m)}{}};
 }\quad,
 \]
-respectively.
+respectively. In other words, edges are not crossed in unexpected ways.
 \end{remark}
-
+%-----------
 
 %======================================
 \subsection{Four Boxes}\label{subsection:FourBoxes}
